--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -4,7 +4,7 @@ LABEL role='libreoffice' version='0.0.1' tags='libreoffice,openoffice' descripti
 ENV TIMEZONE="Asia/Shanghai" \
     VERSION=5.2.3
 #install software
-RUN apk update && \
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && apk update && \
     apk add tzdata \
     libreoffice && \
 #Cleaning up
